--- a/SDL_Template/SDL_Template.vcxproj
+++ b/SDL_Template/SDL_Template.vcxproj
@@ -167,6 +167,7 @@ xcopy "$(ProjectDir)..\Data\*" "$(OutDir)Data\" /y /s</Command>
     <ClCompile Include="CloudLayer.cpp" />
     <ClCompile Include="Clouds.cpp" />
     <ClCompile Include="Collider.cpp" />
+    <ClCompile Include="Foreground.cpp" />
     <ClCompile Include="GameEntity.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="GLGraphics.cpp" />
@@ -198,6 +199,7 @@ xcopy "$(ProjectDir)..\Data\*" "$(OutDir)Data\" /y /s</Command>
     <ClInclude Include="CloudLayer.h" />
     <ClInclude Include="Clouds.h" />
     <ClInclude Include="Collider.h" />
+    <ClInclude Include="Foreground.h" />
     <ClInclude Include="GameEntity.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="GLGraphics.h" />
