added background element colour changes

--- a/SDL_Template/SDL_Template.vcxproj
+++ b/SDL_Template/SDL_Template.vcxproj
@@ -166,6 +166,7 @@ xcopy "$(ProjectDir)..\Data\*" "$(OutDir)Data\" /y /s</Command>
     <ClCompile Include="CircleCollider.cpp" />
     <ClCompile Include="CloudLayer.cpp" />
     <ClCompile Include="Clouds.cpp" />
+    <ClCompile Include="CloudsBlack.cpp" />
     <ClCompile Include="Collider.cpp" />
     <ClCompile Include="Foreground.cpp" />
     <ClCompile Include="GameEntity.cpp" />
@@ -198,6 +199,7 @@ xcopy "$(ProjectDir)..\Data\*" "$(OutDir)Data\" /y /s</Command>
     <ClInclude Include="CircleCollider.h" />
     <ClInclude Include="CloudLayer.h" />
     <ClInclude Include="Clouds.h" />
+    <ClInclude Include="CloudsBlack.h" />
     <ClInclude Include="Collider.h" />
     <ClInclude Include="Foreground.h" />
     <ClInclude Include="GameEntity.h" />
