Changed foreground to level 1, made level1 update function in playscreen, made switch statements tracking level in Playscreen::Render and Update, Made it so on level 1 the player enters level 2 after passing x 1660

--- a/SDL_Template/SDL_Template.vcxproj.filters
+++ b/SDL_Template/SDL_Template.vcxproj.filters
@@ -138,7 +138,7 @@
     <ClCompile Include="BackgroundClouds.cpp">
       <Filter>Source Files\Galaga</Filter>
     </ClCompile>
-    <ClCompile Include="Foreground.cpp">
+    <ClCompile Include="Level1.cpp">
       <Filter>Source Files\Galaga</Filter>
     </ClCompile>
     <ClCompile Include="CloudsBlack.cpp">
@@ -239,7 +239,7 @@
     <ClInclude Include="CloudLayer.h">
       <Filter>Header Files\Galaga</Filter>
     </ClInclude>
-    <ClInclude Include="Foreground.h">
+    <ClInclude Include="Level1.h">
       <Filter>Header Files\Galaga</Filter>
     </ClInclude>
     <ClInclude Include="CloudsBlack.h">
