--- a/SDL_Template/SDL_Template.vcxproj
+++ b/SDL_Template/SDL_Template.vcxproj
@@ -168,7 +168,7 @@ xcopy "$(ProjectDir)..\Data\*" "$(OutDir)Data\" /y /s</Command>
     <ClCompile Include="Clouds.cpp" />
     <ClCompile Include="CloudsBlack.cpp" />
     <ClCompile Include="Collider.cpp" />
-    <ClCompile Include="Foreground.cpp" />
+    <ClCompile Include="Level1.cpp" />
     <ClCompile Include="GameEntity.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="GLGraphics.cpp" />
@@ -201,7 +201,7 @@ xcopy "$(ProjectDir)..\Data\*" "$(OutDir)Data\" /y /s</Command>
     <ClInclude Include="Clouds.h" />
     <ClInclude Include="CloudsBlack.h" />
     <ClInclude Include="Collider.h" />
-    <ClInclude Include="Foreground.h" />
+    <ClInclude Include="Level1.h" />
     <ClInclude Include="GameEntity.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="GLGraphics.h" />
