--- a/SDL_Template/SDL_Template.vcxproj.filters
+++ b/SDL_Template/SDL_Template.vcxproj.filters
@@ -147,6 +147,9 @@
     <ClCompile Include="Level2.cpp">
       <Filter>Source Files\Galaga</Filter>
     </ClCompile>
+    <ClCompile Include="TutorialScreen.cpp">
+      <Filter>Source Files\Galaga</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameEntity.h">
@@ -249,6 +252,9 @@
       <Filter>Header Files\Galaga</Filter>
     </ClInclude>
     <ClInclude Include="Level2.h">
+      <Filter>Header Files\Galaga</Filter>
+    </ClInclude>
+    <ClInclude Include="TutorialScreen.h">
       <Filter>Header Files\Galaga</Filter>
     </ClInclude>
   </ItemGroup>
