added level 3 elements

--- a/SDL_Template/SDL_Template.vcxproj.filters
+++ b/SDL_Template/SDL_Template.vcxproj.filters
@@ -147,7 +147,7 @@
     <ClCompile Include="Level2.cpp">
       <Filter>Source Files\Galaga</Filter>
     </ClCompile>
-    <ClCompile Include="TutorialScreen.cpp">
+    <ClCompile Include="Level3.cpp">
       <Filter>Source Files\Galaga</Filter>
     </ClCompile>
   </ItemGroup>
@@ -254,7 +254,7 @@
     <ClInclude Include="Level2.h">
       <Filter>Header Files\Galaga</Filter>
     </ClInclude>
-    <ClInclude Include="TutorialScreen.h">
+    <ClInclude Include="Level3.h">
       <Filter>Header Files\Galaga</Filter>
     </ClInclude>
   </ItemGroup>
