Created CreditsScreen Class

--- a/SDL_Template/SDL_Template.vcxproj.filters
+++ b/SDL_Template/SDL_Template.vcxproj.filters
@@ -153,6 +153,9 @@
     <ClCompile Include="TutorialScreen.cpp">
       <Filter>Source Files\Galaga</Filter>
     </ClCompile>
+    <ClCompile Include="CreditsScreen.cpp">
+      <Filter>Source Files\Galaga</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameEntity.h">
@@ -261,6 +264,9 @@
       <Filter>Header Files\Galaga</Filter>
     </ClInclude>
     <ClInclude Include="TutorialScreen.h">
+      <Filter>Header Files\Galaga</Filter>
+    </ClInclude>
+    <ClInclude Include="CreditsScreen.h">
       <Filter>Header Files\Galaga</Filter>
     </ClInclude>
   </ItemGroup>
