--- a/SDL_Template/SDL_Template.vcxproj
+++ b/SDL_Template/SDL_Template.vcxproj
@@ -167,6 +167,7 @@ xcopy "$(ProjectDir)..\Data\*" "$(OutDir)Data\" /y /s</Command>
     <ClCompile Include="CloudLayer.cpp" />
     <ClCompile Include="Clouds.cpp" />
     <ClCompile Include="CloudsBlack.cpp" />
+    <ClCompile Include="CloudsColor.cpp" />
     <ClCompile Include="Collider.cpp" />
     <ClCompile Include="CreditsScreen.cpp" />
     <ClCompile Include="GameEntity.cpp" />
@@ -205,6 +206,7 @@ xcopy "$(ProjectDir)..\Data\*" "$(OutDir)Data\" /y /s</Command>
     <ClInclude Include="CloudLayer.h" />
     <ClInclude Include="Clouds.h" />
     <ClInclude Include="CloudsBlack.h" />
+    <ClInclude Include="CloudsColor.h" />
     <ClInclude Include="Collider.h" />
     <ClInclude Include="CreditsScreen.h" />
     <ClInclude Include="GameEntity.h" />
